# BlockBot

./: .gitignore  CMakeLists.txt  LICENSE  QtProject.pro  README.md  TODO.md  archive.md  blocks.md  clear_white_background.py  level.txt  level_gen.py  main.cpp  mazeGernerator.cpp  prompt.md  report.html  resource.qrc  robot.md  robot_escape_script.md  robot_escape_story.md  tale.cpp  tale.h  test.cpp
ans/: BlockBot_1.json  BlockBot_2.json  BlockBot_3.json  BlockBot_4.json  BlockBot_5.json  BlockBot_6.json  BlockBot_7.json  BlockBot_8.json  BlockBot_9.json
core/: Block.cpp  Block.h  Ops.cpp  Ops.h  Runtime.cpp  Runtime.h  Value.cpp  Value.h
docs/: TODO.md  archive.md  blocks.md  buttoms.md  colors.md  cypher.md  design.md  hint.md  robot_escape_script.md  robot_escape_story.md  项目初始方案.md
level/: Level.cpp  Level.h  LevelConstants.h  MazeGenerator.h  level3.txt  level4.txt  level5.txt  level9.txt  mazeGernerator.cpp
message/: Message.cpp  Message.h
settings/: SettingsDialog.cpp
tale/: 1-lose.cpp  1-start.cpp  1-win.cpp  2-lose.cpp  2-start.cpp  2-win.cpp  3-lose.cpp  3-start.cpp  3-win.cpp  4-lose.cpp  4-start.cpp  4-win.cpp  5-lose.cpp  5-start.cpp  5-win.cpp  9-1.cpp  9-2.cpp  9-3.cpp  9-4.cpp  9-start.cpp  TaleWindow.cpp  TaleWindow.h  readme.md  start.cpp
ui/: App.cpp  App.h  AppGraphicsView.h  ArchivePage.cpp  ArchivePage.h  AudioManager.cpp  AudioManager.h  MainWindow.cpp  MainWindow.h  SaveCrypto.cpp  SaveCrypto.h  SettingsDialog.cpp  SettingsDialog.h  UiConstants.h  Widgets.h  hint.cpp  hint.h  levelchoosepage.cpp  levelchoosepage.h  parameter.h
